# CAM-SIMA

./: .config_files.xml  .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Externals.cfg  Externals_CAM.cfg  README.md
cime_config/: atm_in_paramgen.py  (+17 more)
src/core_utils/: CMakeLists.txt  string_core_utils.F90
src/dynamics/mpas/: .mpas_sparse_checkout  CMakeLists.txt  Makefile  Makefile.in.CESM  dyn_comp.F90  dyn_comp_impl.F90  dyn_coupling.F90  dyn_coupling_impl.F90  dyn_grid.F90  dyn_grid_impl.F90  dyn_procedure.F90  dyn_procedures.F90  namelist_definition_mpas_dycore.xml  stepon.F90
src/dynamics/mpas/assets/: 0001-Fix-Fortran-standard-violation.patch  0001-Prefix-all-MPAS-namelist-group-and-option-names.patch  0002-Add-missing-argument-intent.patch  0002-Disable-physics-for-MPAS-dycore-only-build.patch  0003-Avoid-implicit-save-attribute.patch  0003-Declare-constants-at-the-native-precision-of-MPAS.patch  Makefile.in.CESM  ford-config.md  fortitude_config.toml  generate_namelist_definition.py
src/dynamics/mpas/driver/: dyn_mpas_procedure.F90  dyn_mpas_procedures.F90  dyn_mpas_subdriver.F90
src/physics/utils/: CMakeLists.txt  cam_ccpp_scheme_namelists.F90  cam_constituents.F90  constituents.F90  gravity_wave_drag_ridge_read.F90  musica_ccpp_dependencies.F90  musica_sima_namelist.F90  orbital_data.F90  phys_comp.F90  phys_vert_coord.F90  physics_column_type.F90  physics_data.F90  physics_grid.F90  pio_reader.F90  pio_reader_sub.F90  ppgrid.F90  radiation_namelist.F90  sima_ccpp_FileIO.F90  solar_parms_data.F90  tropopause_climo_read.F90  tropopause_read_file.F90
test/: .pylintrc  CMakeLists.txt  doctest_test.sh  existing-test-failures.txt  pylint_test.sh  run_python_unit_tests.sh  run_tests.sh  run_unit_tests.sh  valgrind.supp
test/cmake/: TestUtils.cmake
test/docker/: Dockerfile
test/hist_tests/: CMakeLists.txt  cam_history_support.F90  cam_interp_mod.F90  run_test  test_history.F90
test/hist_tests/sample_files/: amwg_hist_config  rrtmg_rad_config  single_good_config.nl  two_good_configs.nl  user_nl_cam  user_nl_cam_defaults  user_nl_cam_rrtmg
test/include/: Makefile  cam_abortutils.F90  cam_control_mod.F90  cam_logfile.F90  ccpp_kinds.F90  pio.F90  shr_assert_mod.F90  shr_infnan_mod.F90  shr_mem_mod.F90  shr_string_mod.F90  spmd_utils.F90  time_manager.F90
test/system/: archive_baseline.sh  test_driver.sh  test_driver_nobl.sh
test/unit/: CMakeLists.txt  cam_config_unit_tests.py  create_readnl_files_tests.py  test_atm_in_paramgen.py  test_build_cache.py  test_cam_autogen.py  test_cam_config.py  test_create_readnl_files.py  test_hist_config.py  test_registry.py  test_write_hist_file.py  test_write_init_files.py  write_init_unit_tests.py
test/unit-fortran/: CMakeLists.txt
test/unit-fortran/src/core_utils/: CMakeLists.txt  test_string_core_utils.pf
test/unit/fortran/: CMakeLists.txt
test/unit/fortran/ccpp_framework_stub/: CMakeLists.txt  ccpp_kinds.F90  ccpp_kinds.mod
test/unit/fortran/cmake/: FindPIO.cmake
test/unit/fortran/include/: ccpp_kinds.F90
test/unit/fortran/mock_routines/: CMakeLists.txt  cam_pio_utils.F90
test/unit/fortran/utils/: CMakeLists.txt  cam_pio_utils.F90
test/unit/physics/utils/: CMakeLists.txt  test_orbital_data.F90  test_orbital_data_stubs.F90
test/unit/python/: .coveragerc  test_atm_in_paramgen.py  test_build_cache.py  test_cam_autogen.py  test_cam_config.py  test_create_readnl_files.py  test_hist_config.py  test_registry.py  test_write_init_files.py
test/unit/python/sample_files/: datatable_constituent_dim.xml  phys_vars_init_check_constituent_dim.F90  physics_inputs_constituent_dim.F90  physics_types_complete.F90  physics_types_ddt2.F90  physics_types_ddt_array.F90  physics_types_ddt_eul.F90  physics_types_ddt_fv.F90  physics_types_ddt_mf.F90  physics_types_ddt_se.F90  physics_types_parameter.F90  physics_types_self_ref_dim.F90  physics_types_simple.F90  physics_types_simple_constituent_dim.F90  physics_types_simple_initial_value.F90  reg_bad_xml.xml  reg_good_complete.xml  reg_good_ddt.xml  reg_good_ddt_array.xml  reg_good_mf.xml  reg_good_self_ref_dim.xml  reg_good_simple.xml
test/unit/sample_files/: gw_drag_namelist.xml  physics_types_complete.F90  physics_types_ddt2.F90  physics_types_ddt_array.F90  physics_types_ddt_eul.F90  physics_types_ddt_fv.F90  physics_types_ddt_se.F90  physics_types_parameter.F90  physics_types_simple.F90  rayleigh_friction_namelist.xml  reg_bad_xml.xml  reg_good_complete.xml  reg_good_ddt.xml  reg_good_ddt2.xml  reg_good_ddt_array.xml  reg_good_mf.xml  reg_good_simple.xml  rotten_namelist.xml
test/unit/sample_files/atm_in_files/: test_attr_in  test_cmplx_array_atm_in  test_extra_nml_def.xml  test_extra_nml_same_group.xml  test_missing_elems.xml  test_multi_attr_in  test_multi_xml_in  test_nl_duplicate_atm_in  test_simple_atm_in  test_simple_nml_def.xml  test_third_nml_def.xml  test_user_in  test_user_nl_allow_dupl_var  test_user_nl_bad_comment  test_user_nl_bad_equals  test_user_nl_bad_format  test_user_nl_double_var  test_user_nl_dupl_var  test_user_nl_no_equals  test_user_nl_simple  test_user_nl_undefined_var
test/unit/sample_files/build_cache_files/: bad_ccpp_tag_build_cache.xml  bad_reg_tag_build_cache.xml  bad_section_tag_build_cache.xml  example_build_cache.xml  update_ccpp_build_cache.xml  update_init_gen_build_cache.xml  update_reg_build_cache.xml
test/unit/sample_files/hist_config_files/: amwg_hist_config  atm_in_flat  atm_in_multi  rad_config  user_nl_cam_flat  user_nl_cam_multi
test/unit/sample_files/namelist_files/: banana_namelist.F90  cam_ccpp_scheme_namelists_double_def.F90  cam_ccpp_scheme_namelists_single_def.F90  gw_drag_namelist.F90  rayleigh_friction_namelist.F90
test/unit_python/: test_atm_in_paramgen.py  test_create_readnl_files.py  test_registry.py  test_write_init_files.py
test/unit_python/sample_files/: kumquat_namelist.xml  physics_types_ddt2.F90  physics_types_parameter.F90  physics_types_simple.F90  reg_bad_xml.xml  reg_good_complete.xml  reg_good_mf.xml
test/utils_tests/: CMakeLists.txt  string_utils_tests.F90  test_utils.F90
(+434 files in other folders)
